# sport-challenge

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github /workflows/: build.yml
.github/workflows/: main.yml
docs/: openapi.yaml  swagger.yaml
public/: challenge.html  challenge.js  feed.html  feed.js  home.html  home.js  index.html  index.js  profile.html  profile.js  record.html  record.js  script.js
public/api/: account.js  activities.js  auth.js  main.js  users.js
public/auth/: login.html  login.js  sign_in.html  sign_up.html  sign_up.js
public/scripts/: activity.js  auth.js  helper.js  helpers.js  requests.js  user.js  variables.js
public/scripts/api/: account.js  activities.js  auth.js  likes.js  main.js  users.js
public/scripts/helper/: Array.js  Cookie.js  Date.js  variables.js
public/style/: base.css  challenge.css  feed.css  home.css  index.css  login.css  record.css  sign_up.css
public/style/base/: button.css  form.css  variables.css
sqlite/: data.db
src/: account.rs  activity.rs  database.rs  hasher.rs  like.rs  logic.rs  main.rs  routes.rs  services.rs  storage.rs  user.rs
src/logic/: account.rs  activities.rs  auth.rs  likes.rs  users.rs
