[package]
name = "sportsfriend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.6.20"
axum-login = { version = "0.6.0", features = ["sqlx", "sqlite"] }
chrono = { version="0.4.31",features = ["serde"] }
rand = { version = "0.8.5", features = ["min_const_gen"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.6.3", features = ["chrono", "sqlite"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
http = "0.2.9"
